定義をspa.chat.cssに移動

--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -5,7 +5,7 @@
  */
 .spa-shell-head, .spa-shell-logo, .spa-shell-head-acct,
 .spa-shell-head-search, .spa-shell-main, .spa-shell-main-nav,
-.spa-shell-main-content, .spa-shell-foot, .spa-shell-chat,
+.spa-shell-main-content, .spa-shell-foot, /*.spa-shell-chat,*/
 .spa-shell-modal {
     position: absolute;
 }
@@ -68,6 +68,7 @@
     right : 0;
     height: 40px;
 }
+/* spa.chat.cssに移動
 .spa-shell-chat {
     bottom       : 0;
     right        : 0;
@@ -80,6 +81,7 @@
 .spa-shell-chat:hover {
     background: #a00;
 }
+*/
 .spa-shell-modal {
     margin-top   : -200px;
     margin-left  : -200px;
@@ -90,4 +92,5 @@
     background   : #fff;
     border-radius: 3px;
     z-index      : 2;
+    display      : none;
 }
