チャットの変更

--- a/css/spa.chat.css
+++ b/css/spa.chat.css
@@ -87,7 +87,7 @@
     height    : 2em;
     left      : 1em;
     right     : 1em;
-    bottom    : 1
+    bottom    : 1em;
     border    : thin solid #888;
     background: #888;
 }
@@ -101,6 +101,9 @@
     background: #ddd;
     color     : #404040;
 }
+    .spa-chat-box input[type=text]:focus {
+        background: #fff
+    }
 
 .spa-chat-box div {
     float      : left;
