--- a/css/spa.css
+++ b/css/spa.css
@@ -11,14 +11,14 @@
         box-sizing         : border-box;
 
     }
-    h1,h2,h3,h4,h5,h6,p { margin-bottom: 10px; }
+    h1,h2,h3,h4,h5,h6,p { margin-bottom: 6px; }
     ol,ul,dl{ list-style-position: inside; }
 
 /** reset end */
 
 /** standard selecter start */
     body {
-        font            : 13px 'Trebuchet MS' , Verdana, Helvetica, Arial, sans-serif;
+        font            : 10px 'Trebuchet MS' , Verdana, Helvetica, Arial, sans-serif;
         color           : #444;
         background-color: #888;
     }
@@ -35,17 +35,20 @@
 /** spa name space selecter start */
     #spa {
         position        : absolute;
-        top             : 8px;
-        left            : 8px;
-        bottom          : 8px;
-        right           : 8px;
-        
-        min-height      : 500px;
-        min-width       : 500px;
+        top             : 0;
+        left            : 0;
+        bottom          : 0;
+        right           : 0;
+        background      : #fff;
+
+        min-height      : 15em;
+        min-width       : 35em;
         overflow        : hidden;
 
+        /*
         background-color: #fff;
         border-radius   : 0 8px 0 8px;
+        */
     }
 /** spa name space selecter end */
 
