--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -16,18 +16,31 @@
     height: 40px;
 }
 .spa-shell-head-logo {
-    top       : 40px;
-    left      : 4px;
+    top       : 4px;
+    left      : 8px;
     height    : 32px;
     width     : 128px;
-    background: orange;
+/*    background: orange; */
+}
+.spa-shell-head-logo h1 {
+    font  : 800 22px/22px Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+.spa-shell-head-logo p {
+    font  : 800 10px/10px Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 .spa-shell-head-acct {
-    top       : 4px;
-    right     : 0;
-    width     : 64px;
-    height    : 32px;
-    background: green;
+    top          : 4px;
+    right        : 0;
+    width        : 210px;
+    height       : 32px;
+    line-height  : 32px;
+    background   : #888;
+    color        : #fff;
+    text-align   : center;
+    cursor       : pointer;
+    text-overflow: ellipsis;
 }
 .spa-shell-head-search {
     top       : 4px;
@@ -44,18 +57,21 @@
 }
 .spa-shell-main-content,
 .spa-shell-main-nav {
+/*
     top   : 0;
     bottom: 0;
+*/
 }
 .spa-shell-main-nav {
-    width     : 250px;
+    width     : 400px;
     background: #eee;
+    z-index   : 1;
 }
 .spa-x-closed, .spa-shell-main-nav {
     width: 0;
 }
 .spa-shell-main-content {
-    left      : 250px;
+    left      : 400px;
     right     : 0;
     background: #ddd;
 }
