--- a/css/spa.css
+++ b/css/spa.css
@@ -9,11 +9,34 @@
         -webkit-box-sizing : border-box;
         -moz-box-sizing    : border-box;
         box-sizing         : border-box;
-
     }
     h1,h2,h3,h4,h5,h6,p { margin-bottom: 6px; }
     ol,ul,dl{ list-style-position: inside; }
+    * {
+        -webkit-user-select: none;
+        -khtml-user-select : none;
+        -moz-user-select   : -moz-none;
 
+        -o-user-select : none;
+        -ms-user-select: none;
+        user-select    : none;
+
+        -webkit-user-drag: none;
+        -moz-user-drag   : none;
+        user-drag        : none;
+
+        -webkit-tap-highlight-color: transparent;
+        -webkit-touch-callout      : none;
+    }
+
+    input, textarea, .spa-x-user-select {
+        -webkit-user-select: text;
+        -khtml-user-select : text;
+        -moz-user-select   : text;
+        -o-user-select     : text;
+        -ms-user-select    : text;
+        user-select        : text;:
+    }
 /** reset end */
 
 /** standard selecter start */
